fix: dock-bar start and end children alignment issues due to children size differences

--- a/styles/pill.css
+++ b/styles/pill.css
@@ -13,7 +13,7 @@
 }
 
 #vert.expand{
-    min-height: 30px;
+    min-height: 36px;
     min-width: 446px;
     transition: min-height 0.25s cubic-bezier(0.5, 0.25, 0, 1), min-width 0.25s cubic-bezier(0.5, 0.25, 0, 1);
 }
@@ -38,7 +38,6 @@
 
 #start, #end{
     background-color: black;
-    min-width: 100px;
 }
 #start.expander{
     border-top-right-radius: 20px;
@@ -82,3 +81,7 @@
 #pill-container{
     padding: 3px;
 }
+
+/* #inner-end{
+    background-color: beige;
+} */
